# repliqia

./: .gitignore  README.md  package-lock.json  pyproject.toml  repliqia_sim.py  test_fix.py
docs/: context.json  decisions.json  demo-hardening-checklist.md
interface/: __init__.py
interface/cli/: __init__.py  commands.py
interface/gui/: __init__.py  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
interface/gui/src/: App.jsx  api.js  main.jsx
interface/gui/src/components/: ConflictPanel.jsx  DemoRunner.jsx  ErrorBoundary.jsx  EventLog.jsx  NodeCard.jsx  NodeGrid.jsx  OperationPanel.jsx  TopBar.jsx  VectorClockViz.jsx
interface/gui/src/hooks/: useClockPoll.js  useConflictsPoll.js  useEventLog.js  useNodes.js  useNodesLight.js  useWebSocket.js
interface/gui/src/scenarios/: index.js
repliqia/: orchestrator.py
repliqia/api/: __init__.py  server.py
repliqia/clock/: vector_clock.py
repliqia/core/: __init__.py  node.py
repliqia/replication/: __init__.py  sync.py
repliqia/storage/: __init__.py  sqlite.py  store.py
src/repliqia/: __init__.py
src/repliqia/clock/: __init__.py
src/repliqia/core/: node.py
src/repliqia/storage/: memory.py
tests/: test_api_server.py  test_cli.py  test_node.py  test_replication.py  test_storage.py  test_vector_clock.py
