[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repliqia"
version = "0.1.0"
description = "Dynamo-style distributed vector-clock-based key-value store with causal ordering and eventual consistency"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Repliqia Team", email = "dev@repliqia.local" }]
requires-python = ">=3.11"

dependencies = [
    "flask>=3.0.0",           # REST API server
    "flask-cors>=4.0.0",      # CORS handling
    "flask-sock>=0.7.0",      # WebSocket support
    "requests>=2.31.0",       # HTTP client for peer sync
    "pydantic>=2.0.0",        # Data validation
    "click>=8.0.0",           # CLI framework
    "pytest>=7.4.0",          # Testing
    "pytest-asyncio>=0.21.0", # Async test support
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
]

# Package discovery (flat layout at root)
[tool.hatch.build.targets.wheel]
packages = ["repliqia", "interface"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
